--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"main": "src/index.ts",
 	"module": "src/index.ts",
 	"type": "module",
+	"engineStrict": true,
 	"scripts": {
 		"start": "bun run src/index.ts",
 		"dev": "bun --watch src/index.ts",
@@ -23,11 +24,11 @@
 		"README.md"
 	],
 	"engines": {
-		"bun": ">=1.0.0"
+		"bun": ">=1.3"
 	},
 	"repository": {
 		"type": "git",
-		"url": "git+https://heliopolis.live/creations/arrpc-bun.git"
+		"url": "https://heliopolis.live/creations/arrpc-bun.git"
 	},
 	"author": "OpenAsar (original), creations (TypeScript port)",
 	"license": "MIT",
