--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,9 +15,21 @@ jobs:
           - os: ubuntu-latest
             artifact_name: arrpc-bun-linux-x64
             target: bun-linux-x64
+          - os: ubuntu-latest
+            artifact_name: arrpc-bun-linux-arm64
+            target: bun-linux-arm64
+          - os: ubuntu-latest
+            artifact_name: arrpc-bun-linux-x64-musl
+            target: bun-linux-x64-musl
+          - os: ubuntu-latest
+            artifact_name: arrpc-bun-linux-arm64-musl
+            target: bun-linux-arm64-musl
           - os: macos-latest
             artifact_name: arrpc-bun-darwin-x64
             target: bun-darwin-x64
+          - os: macos-latest
+            artifact_name: arrpc-bun-darwin-arm64
+            target: bun-darwin-arm64
           - os: windows-latest
             artifact_name: arrpc-bun-windows-x64.exe
             target: bun-windows-x64
