--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Build executable
         run: |
           mkdir -p dist
-          bun build --compile ./src/index.ts ./detectable.json ./detectable_fixes.json --outfile dist/${{ matrix.artifact_name }} --target ${{ matrix.target }}
+          bun build --compile ./src/index.ts --outfile dist/${{ matrix.artifact_name }} --target ${{ matrix.target }}
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
