--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "arrpc-bun",
-	"version": "1.3.3",
+	"version": "1.3.4",
 	"description": "TypeScript/Bun port of arRPC - Open Discord RPC server",
 	"main": "src/index.ts",
 	"module": "src/index.ts",
@@ -21,6 +21,7 @@
 		"src/",
 		"scripts/",
 		"detectable.json",
+		"detectable_fixes.json",
 		"LICENSE",
 		"README.md"
 	],
